--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <title>Boolando</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="container flex">
+            <div class="side-nav left">
+                <ul class="flex gap-10">
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+            </div>
+            <div class="center-nav">
+                <a href="#"><img src="img/boolean-logo.png" alt="boolean-logo" class="logo"></a>
+            </div>
+            <div class="side-nav right flex gap-10">
+                <a href="#"><i class="fa-regular fa-user"></i></a>
+                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
