--- a/index.html
+++ b/index.html
@@ -28,5 +28,69 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="row flex gap-20">
+                <div class="col">
+                    <div class="card">
+                        <img src="img/1.webp" alt="mam-casual">
+                        <img src="img/1b.webp" alt="man-casual-alt" class="hover-img">
+                    </div>
+                    <h3>Levi's</h3>
+                    <h2>RELAXED FIT TEE UNISEX</h2>
+                    <span class="price discounted">14,99 € </span><span class="price normal">29,99 €</span>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/2.webp" alt="woman-skirt">
+                        <img src="img/2b.webp" alt="woman-skirt-alt" class="hover-img">
+                    </div>
+                    <h3>Guess</h3>
+                    <h2>ROSES TEE</h2>
+                    <span class="price discounted">20,99 € </span><span class="price normal">29,99 €</span>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/3.webp" alt="woman-tailleur">
+                        <img src="img/3b.webp" alt="woman-tailleur-alt" class="hover-img">
+                    </div>
+                    <h3>Come Zucchero Filato</h3>
+                    <h2>VOGLIA DI COLORI PASTELLO</h2>
+                    <span class="price discounted">129,99 € </span><span class="price normal">184,99 €</span>
+                </div>
+            </div>
+            <div class="row flex gap-20">
+                <div class="col">
+                    <div class="card">
+                        <img src="img/4.webp" alt="man-jeans">
+                        <img src="img/4b.webp" alt="man-jeans-alt" class="hover-img">
+                    </div>
+                    <h3>Levi's</h3>
+                    <h2>TEE UNISEX</h2>
+                    <span class="price discounted">14,99 € </span><span class="price normal">29,99 €</span>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/5.webp" alt="woman-dress">
+                        <img src="img/5b.webp" alt="woman-dress-alt" class="hover-img">
+                    </div>
+                    <h3>Maya Deluxe</h3>
+                    <h2>RELAXED FIT TEE UNISEX</h2>
+                    <span class="price discounted">99,99 € </span>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/6.webp" alt="woman-sweater">
+                        <img src="img/6b.webp" alt="woman-sweater-alt" class="hover-img">
+                    </div>
+                    <h3>Esprit!</h3>
+                    <h2>MAGLIONE - BLACK</h2>
+                    <span class="price discounted">29,99 € </span>
+                </div>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
