--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                     <div class="card">
                         <img src="img/1.webp" alt="mam-casual">
                         <img src="img/1b.webp" alt="man-casual-alt" class="hover-img">
+                        <div class="tags">
+                            <div class="tag discount">-50%</div>
+                            <div class="tag sostenibility">Sostenibilità</div>
+                        </div>
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Levi's</h3>
                     <h2>RELAXED FIT TEE UNISEX</h2>
@@ -45,6 +50,10 @@
                     <div class="card">
                         <img src="img/2.webp" alt="woman-skirt">
                         <img src="img/2b.webp" alt="woman-skirt-alt" class="hover-img">
+                        <div class="tags">
+                            <div class="tag discount">-30%</div>
+                        </div>
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Guess</h3>
                     <h2>ROSES TEE</h2>
@@ -54,6 +63,10 @@
                     <div class="card">
                         <img src="img/3.webp" alt="woman-tailleur">
                         <img src="img/3b.webp" alt="woman-tailleur-alt" class="hover-img">
+                        <div class="tags">
+                            <div class="tag discount">-30%</div>
+                        </div>
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Come Zucchero Filato</h3>
                     <h2>VOGLIA DI COLORI PASTELLO</h2>
@@ -65,6 +78,11 @@
                     <div class="card">
                         <img src="img/4.webp" alt="man-jeans">
                         <img src="img/4b.webp" alt="man-jeans-alt" class="hover-img">
+                        <div class="tags">
+                            <div class="tag discount">-50%</div>
+                            <div class="tag sostenibility">Sostenibilità</div>
+                        </div>
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Levi's</h3>
                     <h2>TEE UNISEX</h2>
@@ -74,6 +92,7 @@
                     <div class="card">
                         <img src="img/5.webp" alt="woman-dress">
                         <img src="img/5b.webp" alt="woman-dress-alt" class="hover-img">
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Maya Deluxe</h3>
                     <h2>RELAXED FIT TEE UNISEX</h2>
@@ -83,6 +102,10 @@
                     <div class="card">
                         <img src="img/6.webp" alt="woman-sweater">
                         <img src="img/6b.webp" alt="woman-sweater-alt" class="hover-img">
+                        <div class="tags">
+                            <div class="tag sostenibility">Sostenibilità</div>
+                        </div>
+                        <div class="favourites">&hearts;</div>
                     </div>
                     <h3>Esprit!</h3>
                     <h2>MAGLIONE - BLACK</h2>
