--- a/index.html
+++ b/index.html
@@ -112,8 +112,30 @@
                     <span class="price discounted">29,99 € </span>
                 </div>
             </div>
-            
         </div>
     </main>
+
+    <footer>
+        <div class="container flex">
+            <div class="footer-left">
+                <h2>Boolando S.r.l</h2>
+                <ul class="flex gap-10">
+                    <li><a href="#">Informazioni legali</a></li>
+                    <li><a href="#">Informativa sulla privacy</a></li>
+                    <li><a href="#">Diritto di recesso</a></li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <h4>Trovaci anche su</h4>
+                <ul class="flex gap-10">
+                    <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
