different method for hover  img

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row flex gap-20">
                 <div class="col">
                     <div class="card">
-                        <img src="img/1.webp" alt="mam-casual">
+                        <img src="img/1.webp" alt="mam-casual" class="base-img">
                         <img src="img/1b.webp" alt="man-casual-alt" class="hover-img">
                         <div class="tags">
                             <div class="tag discount">-50%</div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/2.webp" alt="woman-skirt">
+                        <img src="img/2.webp" alt="woman-skirt" class="base-img">
                         <img src="img/2b.webp" alt="woman-skirt-alt" class="hover-img">
                         <div class="tags">
                             <div class="tag discount">-30%</div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/3.webp" alt="woman-tailleur">
+                        <img src="img/3.webp" alt="woman-tailleur" class="base-img">
                         <img src="img/3b.webp" alt="woman-tailleur-alt" class="hover-img">
                         <div class="tags">
                             <div class="tag discount">-30%</div>
@@ -76,7 +76,7 @@
             <div class="row flex gap-20">
                 <div class="col">
                     <div class="card">
-                        <img src="img/4.webp" alt="man-jeans">
+                        <img src="img/4.webp" alt="man-jeans" class="base-img">
                         <img src="img/4b.webp" alt="man-jeans-alt" class="hover-img">
                         <div class="tags">
                             <div class="tag discount">-50%</div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/5.webp" alt="woman-dress">
+                        <img src="img/5.webp" alt="woman-dress" class="base-img">
                         <img src="img/5b.webp" alt="woman-dress-alt" class="hover-img">
                         <div class="favourites">&hearts;</div>
                     </div>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/6.webp" alt="woman-sweater">
+                        <img src="img/6.webp" alt="woman-sweater" class="base-img">
                         <img src="img/6b.webp" alt="woman-sweater-alt" class="hover-img">
                         <div class="tags">
                             <div class="tag sostenibility">Sostenibilità</div>
